# learning-rust

hello-rust/: Cargo.toml
hello-rust/src/: agenda.rs  lib.rs  main.rs  pig_latin.rs
hello-rust/src/front_of_house/: hosting.rs
simplegrep/: Cargo.toml
simplegrep/src/: lib.rs  main.rs
