[package]
name = "simplegrep"
version = "0.1.0"
authors = ["Edison Gustavo Muenz <edisongustavo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

[dev-dependencies]
rstest = "0.9.0"
tempfile = "3.2.0"
indoc = "1.0.3"